factor out some html into footer.html

--- a/go/tmpl/topic.html
+++ b/go/tmpl/topic.html
@@ -83,22 +83,4 @@
 </table>
 <hr>
 
-<center>Powered by <a href="http://blog.kowalczyk.info/software/fofou">fofou</a>,
-created by <a href="http://blog.kowalczyk.info">Krzysztof Kowalczyk</a></center>
-<br>
-
-{{ if .AnalyticsCode }}
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-var pageTracker = _gat._getTracker("{{.AnalyticsCode}}");
-pageTracker._initData();
-pageTracker._trackPageview();
-</script>
-{{ end }}
-
-</body>
-</html>
-
+{{ template "footer.html" }}
