show ip address of the poster if logged in as admin

--- a/go/tmpl/topic.html
+++ b/go/tmpl/topic.html
@@ -59,7 +59,7 @@
 					{{ end }}
 
 					{{ if $isAdmin }}
-						<br /> From ip: {{ .UserIpStr }}
+						<br /> From ip: {{ .IpAddress }}
 					{{ end }}
 				</div>
 			</div>
