link twitter user names to their twitter account and my name to my website

--- a/go/tmpl/newpost.html
+++ b/go/tmpl/newpost.html
@@ -62,7 +62,7 @@
 				<th><label for="Message">Message:</label></th>
 				<td colspan="2">
 					<textarea class="{{ .MessageClass }}" name="Message" id="Message" style="width: 39em;" rows="16" cols="60" wrap="virtual">{{ .PrevMessage }}</textarea>
-					<div style="width: 300px;">Don't use HTML. Surround URLs with spaces.</div>
+					<div style="width: 300px;">Don't use HTML.</div>
 					&nbsp;
 				</td>
 			</tr>
