--- a/go/tmpl/forum.html
+++ b/go/tmpl/forum.html
@@ -6,6 +6,7 @@
 	<link href="/s/default.css" rel="stylesheet" type="text/css">
 	<script language="javascript" src="/s/default.js" type="text/javascript"></script>
 	<link type="application/rss+xml" rel="alternate" title="Discussion Group" href="/{{.ForumUrl}}/rss">
+  {{ template "analytics.html" . }}
 </head>
 <body>
 
