--- a/go/tmpl/main.html
+++ b/go/tmpl/main.html
@@ -5,6 +5,7 @@
 	<title>Fofou - forums for you</title>
 	<link href="/s/default.css" rel="stylesheet" type="text/css">
 	<script language="javascript" src="/s/default.js" type="text/javascript"></script>
+    {{ template "analytics.html" . }}
 </head>
 <body>
 
