--- a/go/tmpl/topic.html
+++ b/go/tmpl/topic.html
@@ -5,6 +5,7 @@
   <title>{{ .Title }}</title>
   <link href="/s/default.css" rel="stylesheet" type="text/css">
   <script language="javascript" src="/s/default.js" type="text/javascript"></script>
+  {{ template "analytics.html" . }}
 </head>
 
 <body>
