html validation fixes

--- a/go/tmpl/footer.html
+++ b/go/tmpl/footer.html
@@ -1,8 +1,10 @@
 
 <hr>
-<center>Powered by <a href="http://blog.kowalczyk.info/software/fofou">fofou</a>,
-created by <a href="http://blog.kowalczyk.info">Krzysztof Kowalczyk</a></center>
-<br>
+
+<div style="padding-bottom:12px; text-align: center;">
+Powered by <a href="http://blog.kowalczyk.info/software/fofou">fofou</a>,
+created by <a href="http://blog.kowalczyk.info">Krzysztof Kowalczyk</a>
+</div>
 
 </body>
 </html>
