--- a/go/tmpl/newpost.html
+++ b/go/tmpl/newpost.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
 	<title>{{ .Title }}</title>
 	<link href="/s/default.css" rel="stylesheet" type="text/css">
-	<script language="javascript" src="/s/default.js" type="text/javascript"></script>
+	<script src="/s/default.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -29,7 +29,7 @@
 		<input name="num1" value="{{ .Num1 }}" type="hidden">
 		<input name="num2" value="{{ .Num2 }}" type="hidden">
 
-		{{ if .TopicId }} 
+		{{ if .TopicId }}
 			<input name="topicId" value="{{ .TopicId }}" type="hidden">
 			<h2>Reply to "{{ .PrevSubject }}"</h2>
 		{{ else }}
@@ -48,7 +48,7 @@
 					&nbsp;
 			</td>
 			</tr>
-			{{ if not .TopicId }} 
+			{{ if not .TopicId }}
 			<tr>
 				<th><label for="Subject">Subject:</label></th>
 				<td colspan="2">
