--- a/go/tmpl/posts.html
+++ b/go/tmpl/posts.html
@@ -4,7 +4,7 @@
   <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
   <title>{{ .Title }}</title>
   <link href="/s/default.css" rel="stylesheet" type="text/css">
-  <script language="javascript" src="/s/default.js" type="text/javascript"></script>
+  <script src="/s/default.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -28,7 +28,7 @@
     <td class="sidebar">{{ .SidebarHtml }}</td>
 
 	<td class="contents">
-		<script language="javascript" type="text/javascript">
+		<script type="text/javascript">
 			rolloverInit('link', '/img/link_over.jpg');
 			rolloverInit('email', '/img/email_over.jpg');
 			rolloverInit('web', '/img/web_over.jpg');
@@ -58,7 +58,7 @@
 					{{ end }}
 
 					{{ if $isAdmin }}
-						<br /> From ip: {{ .IpAddress }}
+						<br/> From ip: {{ .IpAddress }}
 					{{ end }}
 				</div>
 			</div>
