When showing posts from a given nick or ip address, also show total number of posts

--- a/go/tmpl/posts.html
+++ b/go/tmpl/posts.html
@@ -36,7 +36,7 @@
 			rolloverInit('undo', '/img/undo_over.jpg');
 		</script>
 		<div class="posts">
-
+			<div>Total <b>{{ .TotalCount }}</b> posts.</div><br>
 			{{ range .Posts }}
 			<div>
 				<h3>{{ .Topic.Subject }}</h3>
