--- a/tmpl/topic.html
+++ b/tmpl/topic.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-  <title>{{ .Title }}</title>
+  <title>{{ .Subject }}</title>
   <link href="/s/default.css" rel="stylesheet" type="text/css">
   <script src="/s/default.js" type="text/javascript"></script>
   {{ template "analytics.html" . }}
