point to new forum

--- a/tmpl/forum.html
+++ b/tmpl/forum.html
@@ -28,6 +28,10 @@
   <td class="sidebar">{{ .SidebarHtml }}</td>
   <td class="contents">
 
+    <div class="msg">
+      Due to spam this forum has moved to <a href="https://muut.com/sumatrapdf/">https://muut.com/sumatrapdf/</a>!
+    </div>
+
     <form method="get" action="http://google.com/search">
       <input type="hidden" name="IncludeBlogs" value="1">
       <input type="hidden" name="as_sitesearch" value="{{.ForumFullUrl}}">
