point to forum embedded in sumatra website

--- a/tmpl/forum.html
+++ b/tmpl/forum.html
@@ -29,7 +29,7 @@
   <td class="contents">
 
     <div class="msg">
-      Due to spam this forum has moved to <a href="https://muut.com/sumatrapdf/">https://muut.com/sumatrapdf/</a>!
+      Due to spam this forum has moved to <a href="http://www.sumatrapdfreader.org/forum.html">http://www.sumatrapdfreader.org/forum.html</a>!
     </div>
 
     <form method="get" action="http://google.com/search">
